--- a/portfolio.html
+++ b/portfolio.html
@@ -18,181 +18,257 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Zadanie domowe nr:3</title>
+    <title>Zadanie domowe nr:4</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
-      <div class="container header-help">
-        <nav class="header-nav">
-          <a href="index.html" class="logo-ws"
-            ><span class="logo-color">Web</span>Studio</a
+      <div class="container header__help">
+        <nav class="header__nav">
+          <a href="index.html" class="logo__ws"
+            ><span class="logo__color">Web</span>Studio</a
           >
-          <ul class="header-list">
-            <li><a class="header-link" href="index.html">Agencja</a></li>
+          <ul class="header__list">
             <li>
-              <a class="header-link current" href="portfolio.html">Portfolio</a>
+              <a class="header__link" href="index.html">Agencja</a>
             </li>
-            <li><a class="header-link" href="#">Kontakt</a></li>
+            <li>
+              <a class="header__link current" href="portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li><a class="header__link" href="#">Kontakt</a></li>
           </ul>
         </nav>
-        <div class="header-kontakt">
+        <div class="header__kontakt">
           <a
-            class="header-link header-kontact-link"
+            class="header__link header__kontact__link"
             href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
           >
-          <a class="header-link header-kontact-link" href="tel:+48111111111"
-            >+48 111 111 111</a
-          >
+            <svg class="header__kontakt__icon" width="16" height="12">
+              <use href="images/icons.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com
+          </a>
+          <a class="header__link header__kontact__link" href="tel:+48111111111">
+            <svg class="header__kontakt__icon" width="10" height="16">
+              <use href="images/icons.svg#icon-smartphone"></use>
+            </svg>
+            +48 111 111 111
+          </a>
         </div>
       </div>
     </header>
     <main>
       <section class="section">
         <div class="container">
-          <h1 class="title-button-h1">Something to hide</h1>
-          <ul class="title-button">
-            <li class="but-list">
+          <h1 class="title__button__h1">Something to hide</h1>
+          <ul class="title__button">
+            <li class="but__list">
               <button type="button" style="width: 121px">Wszystkie</button>
             </li>
-            <li class="but-list">
+            <li class="but__list">
               <button type="button" style="width: 93px">Strony</button>
             </li>
-            <li class="but-list">
+            <li class="but__list">
               <button type="button" style="width: 114px">Aplikacje</button>
             </li>
-            <li class="but-list">
+            <li class="but__list">
               <button type="button" style="width: 93px">Dizajn</button>
             </li>
-            <li class="but-list">
+            <li class="but__list">
               <button type="button" style="width: 121px">Marketing</button>
             </li>
           </ul>
-          <ul class="portfolio-list">
-            <li class="portf-list">
-              <img src="images/technocrack.jpg" alt="technocrack" width="370" />
-              <div>
-                <h3 class="portf-list-h3">Technocrack</h3>
-                <p class="portf-list-p">Strona internetowa</p>
+          <ul class="portfolio__list">
+            <li class="portf__list">
+              <a class="shadow" href="#">
+                <div class="portf__list__over__hidden">
+              <img src="images/technocrack.jpg" alt="technocrack" />
               </div>
+              <div class="portf__list__div">
+                <h3 class="portf__list__h3">Technocrack</h3>
+                <p class="portf__list__p">Strona internetowa</p>
+              </div>
+              </a>
             </li>
-            <li class="portf-list">
+            <li class="portf__list">
+              <a class="shadow" href="#">
+                <div class="portf__list__over__hidden">
               <img
                 src="images/GNOvsGS.jpg"
                 alt="Grafika New Orlean vs Golden Star"
-                width="370"
               />
-              <div>
-                <h3 class="portf-list-h3">Grafika New Orlean vs Golden Star</h3>
-                <p class="portf-list-p">Dizajn</p>
+              </div>
+              <div class="portf__list__div">
+                <h3 class="portf__list__h3">
+                  Grafika New Orlean vs Golden Star
+                </h3>
+                <p class="portf__list-p">Dizajn</p>
+                </a>
               </div>
             </li>
-            <li class="portf-list">
+            <li class="portf__list">
+              <a class="shadow" href="#">
+                <div class="portf__list__over__hidden">
               <img
                 src="images/restauracja-seafood.jpg"
                 alt="Restauracja Seafood"
-                width="370"
               />
-              <div>
-                <h3 class="portf-list-h3">Restauracja Seafood</h3>
-                <p class="portf-list-p">Aplikacja</p>
               </div>
+              <div class="portf__list__div">
+                <h3 class="portf__list__h3">Restauracja Seafood</h3>
+                <p class="portf__list__p">Aplikacja</p>
+              </div>
+              </a>
             </li>
-            <li class="portf-list">
+            <li class="portf__list">
+              <a class="shadow" href="#">
+                <div class="portf__list__over__hidden">
               <img
                 src="images/projekt-prime.jpg"
                 alt="Projekt Prime"
-                width="370"
               />
-              <div>
-                <h3 class="portf-list-h3">Projekt Prime</h3>
-                <p class="portf-list-p">Strona internetowa</p>
               </div>
+              <div class="portf__list__div">
+                <h3 class="portf__list__h3">Projekt Prime</h3>
+                <p class="portf__list__p">Strona internetowa</p>
+              </div>
+              </a>
             </li>
-            <li class="portf-list">
+            <li class="portf__list">
+              <a class="shadow" href="#">
+                <div class="portf__list__over__hidden">
               <img
                 src="images/projekt-boxes.jpg"
                 alt="Projekt Boxes"
-                width="370"
               />
-              <div>
-                <h3 class="portf-list-h3">Projekt Boxes</h3>
-                <p class="portf-list-p">Aplikacja</p>
               </div>
+              <div class="portf__list__div">
+                <h3 class="portf__list__h3">Projekt Boxes</h3>
+                <p class="portf__list__p">Aplikacja</p>
+              </div>
+              </a>
             </li>
-            <li class="portf-list">
+            <li class="portf__list">
+              <a class="shadow" href="#">
+                <div class="portf__list__over__hidden">
               <img
                 src="images/IHN-borders.jpg"
                 alt="Inspiration has no Borders"
-                width="370"
               />
-              <div>
-                <h3 class="portf-list-h3">Inspiration has no Borders</h3>
-                <p class="portf-list-p">Strona internetowa</p>
               </div>
+              <div class="portf__list__div">
+                <h3 class="portf__list__h3">Inspiration has no Borders</h3>
+                <p class="portf__list__p">Strona internetowa</p>
+              </div>
+              </a>
             </li>
-            <li class="portf-list">
+            <li class="portf__list">
+              <a class="shadow" href="#">
+                <div class="portf__list__over__hidden">
               <img
                 src="images/limited-edition.jpg"
                 alt="Magazyn Limited Edition"
                 width="370"
               />
-              <div>
-                <h3 class="portf-list-h3">Magazyn Limited Edition</h3>
-                <p class="portf-list-p">Dizajn</p>
               </div>
-            </li>
-            <li class="portf-list">
-              <img src="images/projekt-LAB.jpg" alt="Projekt LAB" width="370" />
-              <div>
-                <h3 class="portf-list-h3">Projekt LAB</h3>
-                <p class="portf-list-p">Marketing</p>
+              <div class="portf__list__div">
+                <h3 class="portf__list__h3">Magazyn Limited Edition</h3>
+                <p class="portf__list__p">Dizajn</p>
               </div>
+              </a>
             </li>
-            <li class="portf-list">
+            <li class="portf__list">
+              <a class="shadow" href="#">
+                <div class="portf__list__over__hidden">
+              <img src="images/projekt-LAB.jpg" alt="Projekt LAB"  />
+              </div>
+              <div class="portf__list__div">
+                <h3 class="portf__list__h3">Projekt LAB</h3>
+                <p class="portf__list__p">Marketing</p>
+              </div>
+              </a>
+            </li>
+            <li class="portf__list">
+              <a class="shadow" href="#">
+                <div class="portf__list__over__hidden">
               <img
                 src="images/groving-business.jpg"
                 alt="Growing Business"
-                width="370"
               />
-              <div>
-                <h3 class="portf-list-h3">Growing Business</h3>
-                <p class="portf-list-p">Aplikacja</p>
               </div>
+              <div class="portf__list__div">
+                <h3 class="portf__list__h3">Growing Business</h3>
+                <p class="portf__list__p">Aplikacja</p>
+              </div>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer class="footer-portfolio">
-      <div class="container">
-        <a href="index.html" class="logo-ws logo-ws-white"
-          ><span class="logo-color">Web</span>Studio</a
-        >
-        <address>
-          <ul>
-            <li class="address-margin">
-              <a
-                class="map-address footer-a-style"
-                href="https://goo.gl/maps/nUJ5Fd3hbuF8FEqy5"
-                >m. Warszawa, Aleje Jerozolimskie 21</a
-              >
+    <footer>
+      <div class="container footer__box">
+        <div>
+          <a href="index.html" class="logo__ws logo__ws__white"
+            ><span class="logo__color">Web</span>Studio</a
+          >
+          <address>
+            <ul>
+              <li class="address__margin">
+                <a
+                  class="map__address"
+                  href="https://goo.gl/maps/nUJ5Fd3hbuF8FEqy5"
+                  >m. Warszawa, Aleje Jerozolimskie 21</a
+                >
+              </li>
+              <li>
+                <a class="contact__info" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="contact__info" href="tel:+48111111111"
+                  >+48 111 111 111</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div>
+          <h3 class="push__it__h3">DOŁĄCZ DO NAS</h3>
+          <ul class="social__icon__box">
+            <li>
+              <a href="#" class="social__icon footer__icon"
+                ><svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <a
-                class="contact-info footer-a-style"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a href="#" class="social__icon footer__icon"
+                ><svg width="20" height="20">
+                  <use href="images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <a class="contact-info footer-a-style" href="tel:+48111111111"
-                >+48 111 111 111</a
-              >
+              <a href="#" class="social__icon footer__icon"
+                ><svg width="20" height="20">
+                  <use href="images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social__icon footer__icon"
+                ><svg width="20" height="20">
+                  <use href="images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
